<resources>
    <string name="app_name">CalculatorFree</string>
    <string name="clear">clear</string>
    <string name="mc">mc</string>
    <string name="mr">mr</string>
    <string name="m">m+</string>
    <string name="m_sub">m-</string>
    <string name="percent">%</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="sub">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sum">+</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="point">.</string>
    <string name="eq">=</string>
    <string name="text_null" />
    <string name="text_b_settings">Settings</string>
    <string name="calculator_theme_settings">Calculator theme settings:</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="van_gogh_theme">Van Gogh theme</string>
    <string name="return_settings">Return</string>
</resources>